# psychopy-eyelink-vwp

./: .gitignore  Example_PsychoPy_EyeLink_VWP.py  EyeLinkCoreGraphicsPsychoPy.py  README.md  pyproject.toml
class_tutorial/: PsychoPy_Coder.ipynb  intro.psyexp  intro.py  intro_lastrun.py
data/: TEST_CRAVE.csv  TEST_CRAVE.psydat
eyetracker_tutorial/: README.md  example_eyetracker.py
eyetracker_tutorial/images/: example_click_doesnt_work.psyexp  example_click_doesnt_work.py
eyetracker_tutorial/results/TEST_2023_11_10_11_06/: TEST_2023_11_10_11_06.EDF  TEST_2023_11_10_11_06.asc
eyetracker_tutorial/spreadsheets/: CB1.csv  CB3.csv  CB4.csv  Practice.csv
images/: example_click_doesnt_work_lastrun.py
images/data/: 178419_example_click_doesnt_work_2023-11-09_16h40.43.115.csv  178419_example_click_doesnt_work_2023-11-09_16h40.43.115.psydat  521542_example_click_doesnt_work_2023-11-09_16h38.41.603.csv  521542_example_click_doesnt_work_2023-11-09_16h38.41.603.psydat  611974_example_click_doesnt_work_2023-11-09_16h27.28.138.csv  611974_example_click_doesnt_work_2023-11-09_16h27.28.138.psydat
spreadsheets/: CB2.csv
